# Fenestra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: build_helpers.cmake  ide_helpers.cmake
cmake/modules/: Fenestra.cmake  FenestraLibrary.cmake  FenestraPlugin.cmake
forwarder/: CMakeLists.txt
forwarder/source/: main.cpp
gui/: CMakeLists.txt
gui/include/: crash_handlers.hpp  messaging.hpp  stacktrace.hpp  window.hpp
gui/include/init/: run.hpp  splash_window.hpp  tasks.hpp
gui/source/: crash_handlers.cpp  main.cpp  stacktrace.cpp
gui/source/init/: splash_window.cpp  tasks.cpp
gui/source/init/run/: cli.cpp  common.cpp  native.cpp  web.cpp
gui/source/messaging/: common.cpp  linux.cpp  macos.cpp  web.cpp  win.cpp
gui/source/window/: linux_window.cpp  macos_window.cpp  web_window.cpp  win_window.cpp  window.cpp
gui/source/window/impl/: linux.cpp  macos.cpp  web.cpp  windows.cpp
lib/: CMakeLists.txt
lib/libfenestra/: CMakeLists.txt
lib/libfenestra/include/: fenestra.hpp
lib/libfenestra/include/fenestra/: plugin.hpp
lib/libfenestra/include/fenestra/api/: event_manager.hpp  fenestra_manager.hpp  interface_registry.hpp  layout_manager.hpp  localization_manager.hpp  plugin_manager.hpp  shortcut_manager.hpp  task_manager.hpp  theme_manager.hpp  tutorial_manager.hpp  workspace_manager.hpp
lib/libfenestra/include/fenestra/events/: fenestra_events.hpp  system_events.hpp  ui_events.hpp
lib/libfenestra/include/fenestra/helpers/: auto_reset.hpp  concepts.hpp  default_paths.hpp  fmt.hpp  fs.hpp  logger.hpp  utils.hpp  utils_linux.hpp  utils_macos.hpp
lib/libfenestra/include/fenestra/subcommands/: subcommands.hpp
lib/libfenestra/include/fenestra/ui/: imgui_extensions.h  popup.hpp  toast.hpp  view.hpp  widgets.hpp
lib/libfenestra/source/api/: event_manager.cpp  fenestra_manager.cpp  interface_registry.cpp  layout_manager.cpp  localization_manager.cpp  plugin_manager.cpp  shortcut_manager.cpp  task_manager.cpp  theme_manager.cpp  tutorial_manager.cpp  workspace_manager.cpp
lib/libfenestra/source/helpers/: default_paths.cpp  fs.cpp  imgui_hooks.cpp  logger.cpp  utils.cpp  utils_linux.cpp  utils_macos.m
lib/libfenestra/source/subcommands/: subcommands.cpp
lib/libfenestra/source/ui/: imgui_extensions.cpp  popup.cpp  toast.cpp  view.cpp
lib/trace/: CMakeLists.txt
lib/trace/include/fenestra/trace/: exceptions.hpp  stacktrace.hpp
lib/trace/source/: exceptions.cpp  stacktrace.cpp
plugins/bundled/: CMakeLists.txt
plugins/bundled/source/: interface.cpp  themes.cpp  window_decoration.cpp
plugins/fonts/: CMakeLists.txt
plugins/fonts/source/: font_loader.cpp  fonts.cpp  library_fonts.cpp
